Fix navbar so it should never overflow

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -17,6 +17,10 @@ footer .container {
   background: $footerGrey;
 }
 
+nav ul {
+  float: right;
+}
+
 .page-footer {
   position: absolute;
   bottom: -205px;
@@ -37,10 +41,12 @@ footer .container {
 }
 
 .navLinks {
-    position: absolute;
-    right: 115px;
-    width: 230px;
+  min-width: 500px;
+  float: right;
+  text-align: right;
+  margin-right: 150px;
 }
+
 
 .container-4 {
   margin-bottom: -51px !important;
